apps/traefik/k8s-traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service

spec:
  ports:
    - port: 8080
      targetPort: dashboard
      name: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
