apps/traefik/k8s-dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.services.luke-domain.com`)
      priority: 10
      services:
        - name: traefik-dashboard
          port: 8080
